--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nhan Nguyen || Full Stack Developer with a serious passion for creating dynamic digital experiences and intuitive user interfaces while allowing seamless front-end integration to back-end systems."
+      content="Gowtham"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Gowtham.dev || Aiml Developer</title>
+    <title>Gowthamrdyy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
